corrected walkers page spacing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -51,23 +51,27 @@ a:hover {
 /*Created to space out the body from behind the nav bar*/
 
 #upper-spacer{
-	margin: 0px, auto;
+	margin: 1200px, auto;
 	width: 100%;
-	height: 100px;
-
-	/*position: absolute;*/
+	height: 300px;
+	
 
 }
 
-.buffer {
-	height: 200px;
+.running {
+	margin: 0 auto;
+	position: fixed;
+	width: 100%;
+	z-index: -10;
+	top: 10%;
 }
+
+
 
 .body-wrap {
-	vertical-align: 15%;
+	
 	width: 800px;
 	margin: 0 auto;
-	/*margin-top: 15%;*/
 }
 
 
